--- a/src/app/pages/avisos/avisos.component.css
+++ b/src/app/pages/avisos/avisos.component.css
@@ -1,3 +1,53 @@
+/* Fórmulario de avisos */
+
+.conteudo-avisos-form {
+  max-width: 85%;
+  width: 80%;
+  margin: 17em auto;
+  border-radius: 5px;
+  padding: 4em;
+  background-color: #faf6f6;
+  box-shadow: 0 0 9px 0px rgba(26, 23, 23, 0.411);
+}
+
+.avisos-form {
+    max-width: 60%;
+    margin: 0 auto;
+    padding: 4em;
+    background-color: #f7f7f7;
+    border: 1px solid #eaeaea;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  .form-group {
+    margin-bottom: 15px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+  
+  .btn-submit {
+    background-color: #45a049;
+    color: #fff;
+    padding: 10px 20px;
+    margin-top: 0.5em;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .btn-submit:hover {
+    background-color: #195f1d;
+    transform: scale(1.05);
+  }  
+
+/* Mural de Avisos */
+
 .conteudo-avisos {
   max-width: 85%;
   width: 80%;
@@ -23,13 +73,13 @@
   
   .aviso-card {
     background-color: #fff;
-    padding: 10px;
+    padding: 3em;
     margin-bottom: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    transition: all 0.3s ease; /* Adiciona animação de transição */
+    transition: all 0.3s ease; 
   }
   
   .aviso-card h3 {
@@ -40,13 +90,11 @@
     color: #777;
   }
   
-  /* Adiciona o efeito de levantar o card ao passar o mouse */
   .aviso-card:hover {
     transform: translateY(-5px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
-  /* Adiciona uma animação sutil para o texto */
   .aviso-card h3, .aviso-card p {
     opacity: 0;
     animation: fadeIn 0.5s ease-in-out forwards;
