Melhorando a dinamica de cadastro de visitantes e reservas

--- a/src/app/pages/areas-comuns/areas-comuns.component.html
+++ b/src/app/pages/areas-comuns/areas-comuns.component.html
@@ -41,7 +41,7 @@
         </div>
   </section>
 
-  <section class="section-reserva-morador" *ngIf="reservaMorador">
+  <section class="section-reserva-morador" *ngIf="moradorTemReserva">
     <h2>Suas Reservas</h2>
     <div *ngFor="let reservaMorador of reservaMorador" class="reserva-morador-info">
       <div class="reserva">
