--- a/src/app/pages/visitantes/visitantes.component.html
+++ b/src/app/pages/visitantes/visitantes.component.html
@@ -32,7 +32,7 @@
       </div>
   </section>
 
-  <section class="visitantes-do-morador">
+  <section class="visitantes-do-morador" *ngIf="moradorTemVisitante">
     <h1>Seus visitantes</h1>
     <div class="visitante-mural-container">
         <div class="visitante-list">
