--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,12 @@
 <header>
-    <div>
-      <img routerLink="/" class="logo-da-pagina" src="../../../assets/img/logo-predio.png" alt="lista-de-tarefas">
-    </div>
-    <nav>
-    </nav>
-    <div class="login-buttons">
-      <a class="login-button" routerLink="/login">Login</a>
-      <a class="register-button" routerLink="/cadastrar">Cadastrar</a>
-    </div>
+  <div class="logo-and-title">
+    <img routerLink="/" class="logo-da-pagina" src="../../../assets/img/logo-predio.png" alt="lista-de-tarefas">
+  </div>
+  <nav>
+    <!-- Adicione os itens de navegação conforme necessário -->
+  </nav>
+  <div class="login-buttons">
+    <a class="login-button" routerLink="/login">Login</a>
+    <a class="register-button" routerLink="/cadastrar">Cadastrar</a>
+  </div>
 </header>
