--- a/src/app/pages/cadastrar/cadastrar.component.html
+++ b/src/app/pages/cadastrar/cadastrar.component.html
@@ -56,7 +56,7 @@
       </div>
 
       <div class="login-link">
-        <p>Já tem uma conta? <a href="#">Faça login</a></p>
+        <p>Já tem uma conta? <a routerLink="/login">Faça login</a></p>
       </div>
 
     </form>
