--- a/src/app/pages/contas/contas.component.css
+++ b/src/app/pages/contas/contas.component.css
@@ -1,16 +1,15 @@
 .mural {
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    width: 75%;
-    max-width: 80%;
-    overflow: hidden;
-  }
+  margin: 10em auto;
+  height: 70%; /* Ajuste a altura desejada */
+  max-height: 90%;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  width: 75%;
+  max-width: 80%;
+  overflow: hidden;
+}
 
   .card-list {
     display: flex;
