--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -24,7 +24,7 @@
       <a href="#" class="forgot-password">Esqueceu a senha?</a>
     </div>
     <div class="signup-link">
-      <p>Não tem uma conta? <a href="#">Cadastre-se</a></p>
+      <p>Não tem uma conta? <a href="/cadastrar">Cadastre-se</a></p>
     </div>
   </form>
 </div>
