--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,6 +1,7 @@
 .card {
     width: 300px;
     border: 10px solid #ddd;
+    color: #000;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-right: 2em;
