Adicionando page de produtos

--- a/src/app/components/header-logado/header-logado.component.html
+++ b/src/app/components/header-logado/header-logado.component.html
@@ -9,6 +9,8 @@
       <li><a routerLink="/ocorrencias">Ocorrências</a></li>
       <li><a routerLink="/avisos">Avisos</a></li>
       <li><a routerLink="/visitantes">Visitantes</a></li>
+      <li><a routerLink="/produtos">Produtos</a></li>
+      <li><a routerLink="/servicos">Serviços</a></li>
     </ul>
   </nav>
   <div class="user-profile">
