--- a/src/app/pages/produtos/produtos.component.css
+++ b/src/app/pages/produtos/produtos.component.css
@@ -1,7 +1,7 @@
 form {
     max-width: 400px;
     margin: 15em auto;
-    padding: 20px;
+    padding: 6em;
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -26,8 +26,9 @@ form {
   
   button {
     padding: 8px 16px;
-    background-color: #007bff;
+    background-color: #71ce3b;
     color: #fff;
+    font-weight: bolder;
     border: none;
     border-radius: 4px;
     cursor: pointer;
