--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -21,6 +21,7 @@
     </div>
     <div class="form-actions">
       <button type="submit" class="login-button">Logar</button>
+      <div *ngIf="loginInvalido" class="error-message">Credenciais inválidas. Verifique seu e-mail e senha.</div>
       <a href="#" class="forgot-password">Esqueceu a senha?</a>
     </div>
     <div class="signup-link">
