--- a/src/app/pages/areas-comuns/areas-comuns.component.css
+++ b/src/app/pages/areas-comuns/areas-comuns.component.css
@@ -174,7 +174,7 @@ p {
 .reserva-morador-info h2 {
   text-align: center;
   margin-bottom: 20px;
-  color: #333;
+  color: #ffffff;
   font-weight: bold;
 }
 
