--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,31 +1,53 @@
 <footer class="footer">
-  <div class="footer-container">
-    <div class="footer-logo">
-      <img src="../../../assets/img/img-20230629-wa0019_480-removebg-preview.png" alt="Logo da Empresa">
+  <div class="primeira-section">
+    <div class="primeira-header">
+      <h4>Links</h4>
     </div>
-    <div class="footer-info">
-      <h4>Contato</h4>
-      <p>Fazenda Grande IV, Salvador, Bahia, 41526673</p>
-      <p>Telefone: (75) 9902-0345</p>
-      <p>E-mail: homeplanner@ufn.edu.com</p>
-    </div>
-    <div class="footer-links">
-      <h4>Links úteis</h4>
-      <ul>
-        <li><a href="#">Página Inicial</a></li>
-        <li><a href="#">Sobre Nós</a></li>
-        <li><a href="#">Serviços</a></li>
-        <li><a href="#">Contato</a></li>
+    <div>
+      <ul class="links-footer">
+        <li class="link" routerLink="/">Home</li>
+        <li class="link" routerLink="/">About US</li>
+        <li class="link" routerLink="/servicos">Services</li>
+        <li class="link" routerLink="/">Privacy Policy</li>
       </ul>
     </div>
-    <div class="footer-social">
-      <h4>Redes Sociais</h4>
-      <ul>
-        <li> <a href="#" class="social-icon">Instagram</a> </li>
-        <li> <a href="#" class="social-icon">GitHub</a></li>
-        <li><a href="#" class="social-icon">Email</a></li>
-        <li><a href="#" class="social-icon">Twitter</a></li>
-      </ul>
+    <div></div>
+  </div>
+
+  <div class="segunda-section">
+    <div class="segunda-header">
+      <h4>Our Services</h4>
     </div>
+    <ul class="links-footer">
+      <li class="link" routerLink="/">Web Design</li>
+      <li class="link" routerLink="/">Web Development</li>
+      <li class="link" routerLink="/">Product Manager</li>
+      <li class="link" routerLink="/">Marketing</li>
+      <li class="link" routerLink="/">Graphic Design</li>
+    </ul>
+  </div>
+
+  <div class="terceira-section">
+    <div class="terceira-header">
+      <h4>Residencial</h4>
+    </div>
+    <ul class="links-footer">
+      <li class="link" routerLink="/avisos">Warnings</li>
+      <li class="link" routerLink="/contas">Count</li>
+      <li class="link" routerLink="/servicos">Services Home</li>
+      <li class="link" routerLink="/ocorrencias">Ocorrencias</li>
+    </ul>
+  </div>
+
+  <div class="quarta-section">
+    <div class="quarta-header">
+      <h4>Follow Us On</h4>
+    </div>
+    <ul class="links-icons">
+      <li><a href="https://github.com/olirrvt?tab=repositories"><i class="fa-brands fa-github icons" style="color: #ffffff;"></i></a></li>
+      <li><a href="https://www.instagram.com/olirrvt/"><i class="fa-brands fa-instagram icons" style="color: #f3eded;"></i></a></li>
+      <li><a href="https://outlook.live.com/mail/0/"><i class="fa-solid fa-envelope icons" style="color: #f1f0f0;"></i></a></li>
+      <li><a><i class="fa-brands fa-twitter icons" style="color: #fff8f8;"></i></a></li>
+    </ul>
   </div>
 </footer>
