--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
-  <div class="logo-and-title">
-    <img routerLink="/" class="logo-da-pagina" src="../../../assets/img/logo-predio.png" alt="lista-de-tarefas">
+  <div class="logo">
+    <i class="fa-solid fa-house-laptop fa-2xl" style="color: #ffffff;"></i>
   </div>
   <nav>
     <!-- Adicione os itens de navegação conforme necessário -->
