--- a/src/styles.css
+++ b/src/styles.css
@@ -3,23 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&display=swap');
 
 body {
-    position: relative;
     background-image: url("src/assets/img/background-home.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    margin: 0;
-    padding: 0;
-    height: 300em;
+    display: flex;
+    flex-direction: column;
     font-family: 'Poppins', sans-serif;
-}
-
-body::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: -1;
 }
