--- a/src/app/components/header-logado/header-logado.component.css
+++ b/src/app/components/header-logado/header-logado.component.css
@@ -1,57 +1,104 @@
-/* Estilização do header */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  background-color: #fff;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+.header-fixed {
+	background-color:#000000;
+	box-shadow:0 1px 1px #00000050;
+	padding: 33px 46px;
+	height: 103px;
+	color: #ffffff;
+	box-sizing: border-box;
+	top:-100px;
+	-webkit-transition:top 0.3s;
+	transition:top 0.3s;
 }
 
-.logo-da-pagina {
-  max-width: 19vh;
+.header-fixed .header-limiter {
+	max-width: 1200px;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.header-fixed-placeholder{
+	height: 80px;
+	display: none;
+}
+
+/* Logo */
+
+.header-fixed .header-limiter h1 {
+	float: left;
+	font-family: 'Dancing Script', cursive;
+	line-height: 40px;
+	margin: 0;
+}
+
+.header-fixed .header-limiter h1 span {
+	color: #a55e3e;
+  font-weight: bolder;
+}
+
+/* The navigation links */
+
+.login-btn {
+  background-color: #a55e3e;
+  border-radius: 3px;
+}
+
+.signUp-btn {
+  background-color: #b89585;
+  border-radius: 3px;
+}
+
+.header-fixed .header-limiter a {
+	color: #ffffff;
+	text-decoration: none;
+}
+
+.header-fixed .header-limiter nav {
+	font:16px Arial, Helvetica, sans-serif;
+  display: flex;
+  gap: 0.4em;
+	line-height: 40px;
+	float: right;
+}
+
+.header-fixed .header-limiter nav a {
+	display: inline-block;
+	padding: 3px 5px 3px 5px;
+	text-decoration:none;
+	opacity: 0.9;
   cursor: pointer;
+	position: relative; 
+  font-weight: bolder;
 }
 
-.navbar-menu {
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
+.header-fixed .header-limiter nav a:before {
+	content: "";
+	left: 0;
+  width: 0;
+  border-radius: 3px;
+	opacity: 0;
+	transition: opacity 0.3s;
+	z-index: -1;
+  transition: 500ms ease-in-out;
 }
 
-.navbar-menu li {
-  margin: 0 10px;
+.header-fixed .header-limiter nav a:hover:before {
+	opacity: 1;
+  transition: 500ms ease-in-out;
 }
 
-.navbar-menu li a {
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
-  font-size: 15px;
+
+.header-fixed .header-limiter nav a {
   position: relative;
+  transition: 500ms ease-in-out;
 }
 
-.navbar-menu li a:hover {
-  color: #848688;
-}
-
-.navbar-menu li a:before {
-  content: "";
-  position: absolute;
-  bottom: -3px;
-  left: 0;
-  width: 100%;
-  height: 3px;
-  background-color: #848688;
-  transform: scaleX(0);
-  transition: transform 150ms;
-}
-
-.navbar-menu li a:hover:before {
-  transform: scaleX(1);
+.header-fixed .header-limiter nav a:hover {
+  z-index: 1;
+  transition: 500ms ease-in-out;
+  background-color: #a55e3e;
+  border-radius: 3px;
 }
 
 .user-profile {
@@ -73,56 +120,4 @@ header {
 .user-apartment {
   font-size: 14px;
   color: #666;
-}
-
-.profile-buttons {
-  display: flex;
-  align-items: center;
-  gap: 5%;
-}
-
-.user-initial {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-  background-color: #2e2b2b;
-  color: #fff;
-  border-radius: 50%;
-  font-size: 20px;
-  font-weight: bold;
-  margin-right: 10px;
-  cursor: pointer;
-  transition: all 450ms;
-}
-
-.user-initial:hover {
-  background-color: #444040;
-  transition: all 450ms;
-}
-
-.logout-button {
-  display: inline-block;
-  padding: 10px 20px;
-  border-radius: 4px;
-  text-decoration: none;
-  font-size: 14px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.logout-button {
-  background-color: #e01212;
-  color: #fff;
-  border: none;
-}
-
-.logout-button:hover {
-  background-color: #848688;
-}
-
-.logout-button:hover {
-  background-color: #a32929;
 }
