Ajustes no CSS do Login

--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -94,7 +94,9 @@
   
   
 .error-message {
-  color: red;
+  color: #c50c0c;
+  font-weight: bolder;
   font-size: 14px;
+  padding: 1em;
   margin-top: 5px;
 }
